# loomchart

./: .env.example  .gitignore  CANVAS_DPI_GUIDE.md  CANVAS_DPI_IMPLEMENTATION_PLAN.md  CLAUDE.md  CLEANUP_SUMMARY.md  Cargo.toml  IMPLEMENTATION_PRIORITY_RUST_FIRST.md  INDICATOR_MIGRATION_PLAN.md  INDICATOR_MIGRATION_STATUS.md  README.md  ROADMAP_OVERVIEW.md  ROADMAP_PHASE6.md  ROADMAP_PHASE7.md  ROADMAP_PHASE8.md  SCIENTIFIC_INDICATORS_GUIDE.md  SCIENTIFIC_INDICATORS_ROADMAP.md  TODO.md  build-wasm.sh  docker-compose.yml  package.json  pnpm-lock.yaml  quick-rebuild-wasm.sh  rebuild-and-start.sh  tsconfig.base.json  update_registry.sh
.claude/commands/: add-indicator.md  build-wasm.md  dev.md  test.md
.husky/: pre-commit
apps/capital-feed/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
apps/capital-feed/src/: backfill.rs  candle.rs  config.rs  main.rs  ws_client.rs
apps/demo/: DEPLOY.md  astro.config.mjs  package.json  wrangler.toml
apps/demo/public/: _headers
apps/frontend/: astro.config.mjs  install-tailwind.sh  package.json  tailwind.config.mjs  tsconfig.json
apps/frontend/public/: wasm-loader.js
apps/frontend/src/: env.d.ts
apps/frontend/tests/: integration.test.ts  setup.ts
apps/phoenix/: Dockerfile  Dockerfile.dev  fly.toml  mix.exs
apps/phoenix/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
apps/phoenix/lib/: loom_web.ex
crates/chartcore/: CHANGELOG.md  Cargo.toml
crates/chartcore/examples/: generator.rs
crates/chartcore/src/: chart_plugins.rs  lib.rs  types.rs  wasm.rs
crates/chartcore/src/canvas/: bitmap_space.rs  coordinate_space.rs  media_space.rs  mod.rs
crates/chartcore/src/commands/: mod.rs
crates/chartcore/src/core/: adaptive_fps.rs  buffer.rs  chart.rs  chart_renderer.rs  chart_state.rs  config.rs  events.rs  generator.rs  indicator_renderer.rs  invalidation.rs  mod.rs  types.rs  viewport.rs  volume_pane.rs
crates/chartcore/src/drawings/: drawing.rs  manager.rs  mod.rs  renderer.rs
crates/chartcore/src/indicators/: loader.rs  metadata.rs  mod.rs  output.rs  plugin.rs  registry.rs  trait_metadata.rs  types.rs
crates/chartcore/src/indicators/builtin/: adr.rs  adx.rs  alligator.rs  awesome.rs  bollinger_bands.rs  bop.rs  cci.rs  chande_mo.rs  choppiness.rs  coppock.rs  cvd.rs  donchian.rs  donchian_channels.rs  ema.rs  eom.rs  fisher.rs  hist_vol.rs  keltner_channels.rs  lempel_ziv.rs  ma_cross.rs  ma_ribbon.rs  macd.rs  mass_index.rs  mcginley.rs  mfi.rs  mod.rs  obv.rs  parabolic_sar.rs  permutation_entropy.rs  rci.rs  roc.rs  rsi.rs  shannon_entropy.rs  smma.rs  stdev.rs  stochastic.rs  supertrend.rs  trend_strength.rs  ultimate.rs  volume_osc.rs  (+2 more)
crates/chartcore/src/indicators/ta/: mod.rs
crates/chartcore/src/panels/: manager.rs  mod.rs  panel.rs  scale.rs
crates/chartcore/src/plugins/: loader.rs  mod.rs  registry.rs  types.rs
crates/chartcore/src/plugins/builtin/: alma.rs  aroon.rs  atr.rs  bollinger.rs  bull_bear_power.rs  chaikin.rs  chande_kroll.rs  dema.rs  dmi.rs  dpo.rs  elder_force.rs  envelope.rs  hma.rs  ichimoku.rs  jma.rs  keltner.rs  klinger.rs  lsma.rs  median.rs  mod.rs  momentum.rs  price_osc.rs  pvt.rs  rma.rs  rvi.rs  sma.rs  smi_ergodic.rs  stoch.rs  stoch_rsi.rs  tema.rs  trix.rs  tsi.rs  vortex.rs  williams_r.rs  wma.rs  woodies_cci.rs
crates/chartcore/src/primitives/: color.rs  mod.rs  shapes.rs
crates/chartcore/src/renderers/: canvas2d.rs  commands.rs  mod.rs
crates/chartcore/src/rendering/: canvas2d.rs  mod.rs  optimizations.rs  renderer.rs
crates/chartcore/src/state/: export.rs
crates/chartcore/src/ta/: mod.rs  momentum.rs  moving_averages.rs  statistics.rs  trend.rs  volatility.rs  volume.rs
crates/chartcore/src/tools/: horizontal_line.rs  mod.rs  trendline.rs  vertical_line.rs
crates/chartcore/src/utils/: bar_width.rs  mod.rs
crates/chartcore/tests/: integration_test.rs
deploy/: fly.toml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  PERFORMANCE.md  USER_GUIDE.md
docs/archive/: BUILD_INSTRUCTIONS.md  CHART_ENGINE_COMPARISON.md  CHART_ENGINE_MIGRATION.md  CHART_ROADMAP.md  COMPONENT_TEST.md  FRONTEND_COMPLETION.md  FRONTEND_INTEGRATION.md  INTEGRATION_SUMMARY.md  PANEL_SYSTEM_GUIDE.md  RENDERER_ARCHITECTURE.txt  SESSION_SUMMARY_2025-12-31.md  SESSION_SUMMARY_2025-12-31_FINAL.md  TECHNICAL_ASSESSMENT.txt  TEST_GENERATOR.md  konzept.txt  test-generator.html  todo.txt  umsetzen.txt
docs/completed/: PHASE1_WEEK2_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_TASK3.3_COMPLETE.md  PHASE2_WEEK3_PROGRESS.md  PHASE3_ROADMAP_ASSESSMENT.md  PHASE5_REALTIME_COMPLETE.md  PHASE6_COMPLETE.md  ROADMAP_PHASE1.md  ROADMAP_PHASE2.md  ROADMAP_PHASE3.md  ROADMAP_PHASE4.md  ROADMAP_PHASE5.md
examples/: Cargo.toml  README.md  backtest_sma.rs  custom_plugin.rs  simple_indicators.rs
scripts/archive/: commit-chart-engine.sh  diagnose.sh  rename-chartcore.sh  test-chartcore.sh
supabase/migrations/: 001_create_candles.sql  002_create_indicators.sql  003_create_instruments.sql  004_create_signals.sql
tests/: Cargo.toml
tests/benches/: indicators.rs
tests/common/: mod.rs
tests/golden/: indicators_test.rs  mod.rs  patterns_test.rs
tests/integration/: mod.rs
(+85 files in other folders)
