[package]
name = "loom-tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "Integration tests and golden tests for loom trading libraries"

[dependencies]
loom-core = { path = "../packages/core" }
loom-indicators = { path = "../packages/indicators", features = ["full"] }
loom-signals = { path = "../packages/signals" }
loom-risk = { path = "../packages/risk" }
loom-chart = { path = "../packages/chart" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
approx = "0.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[test]]
name = "golden_indicators"
path = "golden/indicators_test.rs"

[[test]]
name = "golden_patterns"
path = "golden/patterns_test.rs"

[[test]]
name = "integration"
path = "integration/mod.rs"

[[bench]]
name = "indicators_bench"
harness = false
path = "benches/indicators.rs"
