[package]
name = "capital-feed"
version = "0.1.0"
edition = "2021"
default-run = "capital-feed"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# HTTP client for REST API (backfill)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"
futures-util = "0.3.31"

[[bin]]
name = "aggregator"
path = "src/bin/aggregator.rs"
