[package]
name = "chartcore"
version = "0.1.0"
edition = "2021"
description = "Lightweight trading chart engine in Rust - A modern alternative to TradingView Lightweight Charts"
license = "AGPL-3.0-or-later"
repository = "https://github.com/casoon/loom"
keywords = ["trading", "chart", "visualization", "technical-analysis", "indicators"]
categories = ["visualization", "finance"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
rand_xoshiro = "0.6"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Navigator",
    "console",
] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
# No dependencies needed for unit tests yet

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Remove debug symbols
